--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.1.0",
     "mongoose": "^8.0.1",
+    "morgan": "^1.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/express": "^4.17.21",
     "@types/http-status": "^1.1.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
